--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
+    "test:e2e": "playwright test --project=chromium --project=firefox",
+    "test:report": "playwright show-report",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "install-browsers": "cross-env PLAYWRIGHT_DOWNLOAD_TIMEOUT=60000 playwright install"
   },
   "repository": {
     "type": "git",
@@ -28,10 +31,13 @@
     "@babel/plugin-transform-runtime": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
     "@babel/preset-react": "^7.23.3",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
+    "@types/node": "^24.9.2",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "cross-env": "^10.1.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.6.1",
